5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1671_1102.log
== TEST (2019-04-29 13:29:15) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

H = float(input("Qual eh o valor total do tanque? "))
h = float(input("Qual eh o nivel de combustivel do tanque? "))
r = float(input("Valor dos raios? "))

print("Entradas:", H, h , r)
-- OUTPUT:
Entradas: 11.3 5.7 2.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:29:37) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

H = float(input("Qual eh o valor total do tanque? "))
h = float(input("Qual eh o nivel de combustivel do tanque? "))
r = float(input("Valor dos raios? "))

print("Entradas:", H,"," h ",", r)
-- ERROR:
File "XXXX", line 11
    print("Entradas:", H,"," h ",", r)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:29:50) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

H = float(input("Qual eh o valor total do tanque? "))
h = float(input("Qual eh o nivel de combustivel do tanque? "))
r = float(input("Valor dos raios? "))

print("Entradas:", H, ",", h ,"," , r)
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:36:15) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

H = float(input("Qual eh o valor total do tanque? "))
h = float(input("Qual eh o nivel de combustivel do tanque? "))
r = float(input("Valor dos raios? "))

print("Entradas:", H, ",", h ,"," , r)

if( ( H > 0) and ( h > 0) and ( r > 0) ) and (( (H > h) and (H > (2 * r)) )):
		
	
-- EXECUTION TIME:
0.166584
-- ERROR:
  File "/home/codebench/codes/1671/1102/main.py", line 18
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
